AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Visita__c/Visita__c.object-meta.xml
<CustomObject>
    <label>Visita</label>
    <nameField>
        <displayFormat>VIS-{00000}</displayFormat>
        <label>Numero da Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>