AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Visita__c/fields/Corretor__c.field-meta.xml
<CustomField>
    <fullName>Corretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visitas_como_Corretor</relationshipName>
    <type>Lookup</type>
</CustomField>