AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Visita__c/fields/Data_Hora__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora__c</fullName>
    <label>Data e Hora</label>
    <type>DateTime</type>
</CustomField>