AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Visita__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendada</fullName>
                <default>true</default>
                <label>Agendada</label>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Nao Compareceu</fullName>
            </value>
            <value>
                <fullName>Remarcada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>